--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-07-05 18:17:21
- * @LastEditTime: 2021-07-05 19:27:26
+ * @LastEditTime: 2021-07-06 16:17:40
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Penlf\index.html
@@ -68,7 +68,7 @@
         }
 
         // 初始化 (init)
-        let info = window.editor("#demo", save)
+        let info = window.penlf("#demo", save)
         document.querySelector("#version-num").innerHTML = info.version
     </script>
 </body>
